Update DI setup
added httpclient into DI services and moved adding services into custom extension methods

--- a/BlazorApiClient/BlazorApiClient.csproj
+++ b/BlazorApiClient/BlazorApiClient.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>e082bc23-03dd-4294-bbba-68349f529746</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Net.Http.Json" Version="7.0.0" />
+  </ItemGroup>
 
 </Project>
